--- a/scss/content_scss/color_cricle_.scss
+++ b/scss/content_scss/color_cricle_.scss
@@ -1,13 +1,17 @@
 .cricle_color{
+    position: relative;
+    right: 0px;
+    display: flex;
+    align-items: center;
     .white_color{
         background-color: #ffffff;
         border-radius: 50%;
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 150px;
-        bottom: 5px;
+        position: relative;
+        right: 0px;
+        bottom: 0px;
     }
     .white1_color{
         background-color: #ECFBF0;
@@ -15,9 +19,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 146px;
-        bottom: 5px;
+        position: relative;
+        right: 8px;
+        bottom: 0px;
     }
     .white2_color{
         background-color: #F1EEE6;
@@ -25,9 +29,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 138px;
-        bottom: 5px;
+        position: relative;
+        right: 16px;
+        bottom: 0px;
     }
     .blue_color{
         background-color: #0D5385;
@@ -35,9 +39,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 150px;
-        bottom: 5px;
+        position: relative;
+        right: -14px;
+        bottom: 0px;
     }
     .blue1_color{
         background-color: #9ED6FF;
@@ -45,9 +49,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 140px;
-        bottom: 5px;
+        position: relative;
+        right: -2px;
+        bottom: 0px;
     }
     .blue2_color{
         background-color: #0094FF;
@@ -55,9 +59,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 130px;
-        bottom: 5px;
+        position: relative;
+        right: 10px;
+        bottom: 0px;
     }
     .blue3_color{
         background-color: #3BD0FF;
@@ -65,9 +69,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 120px;
-        bottom: 5px;
+        position: relative;
+        right: 20px;
+        bottom:0px;
     }
     .blue4_color{
         background-color: #00618B;
@@ -75,9 +79,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 110px;
-        bottom: 5px;
+        position: relative;
+        right: 27px;
+        bottom: 0px;
     }
     .green_color{
         background-color: #248B00;
@@ -85,9 +89,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 150px;
-        bottom: 5px;
+        position: relative;
+        right: 0px;
+        bottom: 0px;
     }
     .green1_color{
         background-color: #0C4C22;
@@ -95,9 +99,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 140px;
-        bottom: 5px;
+        position: relative;
+        right: 10px;
+        bottom: 0px;
     }
     .green2_color{
         background-color: #98FFBB;
@@ -105,9 +109,9 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 130px;
-        bottom: 5px;
+        position: relative;
+        right: 18px;
+        bottom: 0px;
     }
     .green3_color{
         background-color: #D2FFE1;
@@ -115,8 +119,15 @@
         width: 20px;
         height: 20px;
         cursor: pointer;
-        position: absolute;
-        right: 120px;
-        bottom: 5px;
+        position: relative;
+        right: 25px;
+        bottom: 0px;
     }
+}
+.color_flex{
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    padding-top: 10px;
 }
