--- a/scss/content_scss/form_.scss
+++ b/scss/content_scss/form_.scss
@@ -1,18 +1,35 @@
 input[type="checkbox"]{
-    height: 20px;
-    width: 20px;
-    border-radius: 5px;
-    background-color: none;
-    border: 1px solid #000;
-    margin: 0px 5px -4px 0px;
+    position: relative;
+    width: 28px;
+    height: 28px;
+    border:1px solid #cfcfcf ;
+    border-radius: .25rem;
+    appearance: none;
+    cursor: pointer;
 }
-
+input[type="checkbox"]:checked{
+    background-color: #6F00FF;
+}
+input[type="checkbox"]::before{
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 9px;
+    width: 5px;
+    height: 13px;
+    border: 4px solid transparent;
+    border-left: none;
+    border-top: none;
+    transform: rotate(45deg) scale(1);
+}
+input[type=checkbox]:checked::before{
+    border-color: #fff;
+}
 label{
     display: flex;
     align-items: center;
     padding: 5px 0px;
     position: relative;
-    width: 280px;
 }
 #h2_content{
     padding-top: 38px;
