--- a/css/style.css
+++ b/css/style.css
@@ -365,9 +365,9 @@
 
 .double-slider-box {
   background-color: #fff;
-  padding: 40px 30px 20px 10px;
-  border-radius: 10px;
-  max-width: 20rem;
+  position: relative;
+  width: 100%;
+  padding: 10px 10px;
 }
 
 h3.range-title {
@@ -380,6 +380,10 @@ h3.range-title {
   height: 1px;
   margin: 30px 0;
   background-color: #000;
+}
+.range-slider .center_flex {
+  position: relative;
+  top: -45px;
 }
 
 .range-slider::after {
@@ -444,31 +448,6 @@ input[type=range]::-moz-range-thumb {
   box-shadow: 0 0.125rem 0.5625rem -0.125rem rgba(0, 0, 0, 0.25);
 }
 
-.tooltip {
-  padding: 0.25rem 0.5rem;
-  border: 0;
-  color: #000;
-  font-size: 16px;
-  line-height: 1.2;
-  border-radius: 0.25rem;
-  bottom: 120%;
-  display: block;
-  position: absolute;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.min-tooltip {
-  left: 30%;
-  transform: translateX(-50%) translateY(-80%);
-  z-index: 5;
-}
-
-.max-tooltip {
-  right: 50%;
-  transform: translateX(50%) translateY(-80%);
-}
-
 .input-box {
   display: flex;
 }
@@ -484,6 +463,102 @@ input[type=range]::-moz-range-thumb {
 }
 
 .input-wrap {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+
+.double-slider-box1 {
+  display: none;
+  background-color: #fff;
+  position: relative;
+  width: 100%;
+  padding: 20px 0px;
+}
+.double-slider-box1 h3.range-title {
+  margin-bottom: 4rem;
+}
+.double-slider-box1 .range-slider1 {
+  position: relative;
+  width: 100%;
+  height: 1px;
+  margin: 30px 0;
+  background-color: #000;
+}
+.double-slider-box1 .range-slider1 .center_flex {
+  position: relative;
+  top: -45px;
+}
+.double-slider-box1 .range-slider1::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  border-radius: 50%;
+  width: 5px;
+  background-color: #000;
+  height: 5px;
+  top: -2px;
+}
+.double-slider-box1 .range-slider1::before {
+  content: "";
+  position: absolute;
+  right: 0px;
+  border-radius: 50%;
+  width: 5px;
+  background-color: #000;
+  height: 5px;
+  top: -2px;
+}
+.double-slider-box1 .slider-track1 {
+  height: 100%;
+  position: absolute;
+  background-color: #fe696a;
+}
+.double-slider-box1 .range-slider1 input {
+  position: absolute;
+  width: 100%;
+  background: none;
+  pointer-events: none;
+  top: 50%;
+  transform: translateY(-50%);
+  appearance: none;
+}
+.double-slider-box1 input[type=range]::-webkit-slider-thumb {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 3px solid #9747FF;
+  background-color: none;
+  pointer-events: auto;
+  appearance: none;
+  cursor: pointer;
+  box-shadow: 0 0.125rem 0.5625rem -0.125rem rgba(0, 0, 0, 0.25);
+}
+.double-slider-box1 input[type=range]::-moz-range-thumb {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 3px solid #FFF;
+  background: #FFF;
+  pointer-events: auto;
+  -moz-appearance: none;
+  cursor: pointer;
+  box-shadow: 0 0.125rem 0.5625rem -0.125rem rgba(0, 0, 0, 0.25);
+}
+.double-slider-box1 .input-box1 {
+  display: flex;
+}
+.double-slider-box1 .min-box1,
+.double-slider-box1 .max-box1 {
+  width: 50%;
+}
+.double-slider-box1 .min-box1 {
+  padding-right: 0.5rem;
+  margin-right: 0.5rem;
+}
+.double-slider-box1 .input-wrap1 {
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -1186,6 +1261,12 @@ ion-icon {
   input[type=checkbox] {
     margin: 0px 10px;
   }
+  .double-slider-box1 {
+    display: block;
+  }
+  .double-slider-box {
+    display: none;
+  }
 }
 @media only screen and (max-width: 525px) {
   .footer_content {
@@ -1301,6 +1382,9 @@ ion-icon {
   .container .product_list-content .flowers-wrap form #h2_content {
     font-size: 20px;
     padding-top: 42px;
+  }
+  .container .footer_end-bg {
+    padding: 30px 3px;
   }
   .button_apply button {
     padding: 10px 0px;
