--- a/scss/content_scss/Range_.scss
+++ b/scss/content_scss/Range_.scss
@@ -1,9 +1,9 @@
 // Range Price
 .double-slider-box {
     background-color: #fff;
-    padding: 40px 30px 20px 10px;
-    border-radius: 10px;
-    max-width: 20rem;
+    position: relative;
+    width: 100%;
+    padding: 10px 10px;
 }
 
 h3.range-title {
@@ -15,6 +15,10 @@ h3.range-title {
     height: 1px;
     margin: 30px 0;
     background-color: #000;
+    .center_flex{
+        position: relative;
+        top: -45px;
+    }
 }
 .range-slider::after{
     content: "";
@@ -75,29 +79,6 @@ input[type="range"]::-moz-range-thumb {
     cursor: pointer;
     box-shadow: 0 .125rem .5625rem -0.125rem rgba(0, 0, 0, .25);
 }
-
-.tooltip{
-    padding: .25rem .5rem;
-    border: 0;
-    color: #000;
-    font-size: 16px;
-    line-height: 1.2;
-    border-radius: .25rem;
-    bottom: 120%;
-    display: block;
-    position: absolute;
-    text-align: center;
-    white-space: nowrap;
-}
-.min-tooltip{
-    left: 30%;
-    transform: translateX(-50%) translateY(-80%);
-    z-index: 5;
-}
-.max-tooltip{
-    right: 50%;
-    transform: translateX(50%) translateY(-80%);
-}
 .input-box {
     display: flex;
 }
@@ -118,4 +99,107 @@ input[type="range"]::-moz-range-thumb {
     flex-wrap: wrap;
     align-items: stretch;
     width: 100%;
+}
+
+.double-slider-box1{
+    display: none;
+    background-color: #fff;
+    position: relative;
+    width: 100%;
+    padding: 20px 0px;
+    h3.range-title {
+        margin-bottom: 4rem;
+    }
+    .range-slider1 {
+        position: relative;
+        width: 100%;
+        height: 1px;
+        margin: 30px 0;
+        background-color: #000;
+        .center_flex{
+            position: relative;
+            top: -45px;
+        }
+    }
+    .range-slider1::after{
+        content: "";
+        position: absolute;
+        left: 0px;
+        border-radius: 50%;
+        width: 5px;
+        background-color: #000;
+        height: 5px;
+        top: -2px;
+    }
+    .range-slider1::before{
+        content: "";
+        position: absolute;
+        right: 0px;
+        border-radius: 50%;
+        width: 5px;
+        background-color: #000;
+        height: 5px;
+        top: -2px;
+    }
+    .slider-track1 {
+        height: 100%;
+        position: absolute;
+        background-color: #fe696a;
+    }
+    
+    .range-slider1 input {
+        position: absolute;
+        width: 100%;
+        background: none;
+        pointer-events: none;
+        top: 50%;
+        transform: translateY(-50%);
+        appearance: none;
+    }
+    
+    input[type="range"]::-webkit-slider-thumb {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        border: 3px solid #9747FF;
+        background-color: none;
+        pointer-events: auto;
+        appearance: none;
+        cursor: pointer;
+        box-shadow: 0 .125rem .5625rem -0.125rem rgba(0, 0, 0, .25);
+    }
+    
+    input[type="range"]::-moz-range-thumb {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        border: 3px solid #FFF;
+        background: #FFF;
+        pointer-events: auto;
+        -moz-appearance: none;
+        cursor: pointer;
+        box-shadow: 0 .125rem .5625rem -0.125rem rgba(0, 0, 0, .25);
+    }
+    .input-box1 {
+        display: flex;
+    }
+    
+    .min-box1,
+    .max-box1 {
+        width: 50%;
+    }
+    
+    .min-box1 {
+        padding-right: .5rem;
+        margin-right: .5rem;
+    }
+    
+    .input-wrap1 {
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: stretch;
+        width: 100%;
+    }
+    
 }
